The argument to SCROLL_TO_MAKE_VISIBLE takes local coordinates.

Passing the wrong coordinates was causing it to scroll to the wrong
place and sometimes bounce around. Adds a new browser test to
ensure that calling scrollTo works as expected.

Bug: 788696, 646117
Change-Id: Ia8014c9ee96eef14a60a7f4ddebeec02e2f15db4
Reviewed-on: https://chromium-review.googlesource.com/802235
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Doug Turner <dougt@chromium.org>
Cr-Commit-Position: refs/heads/master@{#521451}
Former-commit-id: 00c26deabe0cda509e37e71498fdb4f2a97e0f9c